WIP tag/aliases syncing.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/200712 LIB parts ingest.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/200712 LIB parts ingest.ipynb
@@ -31,6 +31,7 @@
    "outputs": [],
    "source": [
     "import paulssonlab.api as api\n",
+    "from paulssonlab.api.google.drive import get_drive_modified_time\n",
     "import paulssonlab.cloning.workflow as workflow"
    ]
   },
@@ -318,7 +319,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ingest parts"
+    "# Alias syncing"
    ]
   },
   {
@@ -326,7 +327,173 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def sync_duplicate_info(columns={\"Tags\": \"\\s\", \"Aliases*\": \",\", \"Description\"}):\n",
+    "    # aliases, tags\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# allow batching edits using unlink/link, compare performance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sync_columns(\n",
+    "    sheet1,\n",
+    "    sheet2,\n",
+    "    sync_column,\n",
+    "    join_column=\"Plasmid(s)*\",\n",
+    "    join_separator=\"(?:\\s*,\\s*|\\s+)\",\n",
+    "    strategy=\"newest\",\n",
+    "    separator=None,\n",
+    "):\n",
+    "    pass\n",
+    "\n",
+    "\n",
+    "def sync_colletion_sheets(\n",
+    "    strain_sheet,\n",
+    "    plasmid_sheet,\n",
+    "    part_sheet,\n",
+    "    sync_column,\n",
+    "    join_column=\"Plasmid(s)*\",\n",
+    "    join_separator=\"(?:\\s*,\\s*|\\s+)\",\n",
+    "    strategy=\"newest\",\n",
+    "    separator=None,\n",
+    "):\n",
+    "    mtime1 = get_drive_modified_time(sheet1.client.drive.service, sheet1.spreadsheet.id)\n",
+    "    mtime2 = get_drive_modified_time(sheet2.client.drive.service, sheet2.spreadsheet.id)\n",
+    "    # get columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sync_columns(\n",
+    "    sheets,\n",
+    "    sync_column,\n",
+    "    join_column=\"Plasmid(s)*\",\n",
+    "    join_separator=\"(?:\\s*,\\s*|\\s+)\",\n",
+    "    strategy=\"newest\",\n",
+    "    separator=None,\n",
+    "):\n",
+    "    mtime1 = get_drive_modified_time(sheet1.client.drive.service, sheet1.spreadsheet.id)\n",
+    "    mtime2 = get_drive_modified_time(sheet2.client.drive.service, sheet2.spreadsheet.id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def join_sheets(sheets, join_column):\n",
+    "    pass\n",
+    "\n",
+    "\n",
+    "## join\n",
+    "# row_nums: {\"strain\": X, \"plasmid\": X, \"part\": X}\n",
+    "# ids: {\"strain\": \"LIB2\", \"plasmid\": \"pLIB3\", \"part\": \"ALIAS\"}\n",
+    "\n",
+    "## for each column:\n",
+    "# values: {\"strain\": X, \"plasmid\": X, \"part\": X}\n",
+    "# mtimes: {\"strain\": X, \"plasmid\": X, \"part\": X}\n",
+    "# sync_strategy -> sync_func"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "col_names = strain_sheet.get_row(1)\n",
+    "id_colidx = col_names.index(\"ID*\") + 1\n",
+    "sync_colidx = col_names.index(\"Aliases*\") + 1\n",
+    "join_colidx = col_names.index(\"Plasmid(s)*\") + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "id_column = strain_sheet.get_col(id_colidx, include_tailing_empty=False)\n",
+    "num_rows = len(id_column)\n",
+    "sync_column = strain_sheet.get_values(\n",
+    "    (1, sync_colidx),\n",
+    "    (num_rows, sync_colidx),\n",
+    "    majdim=\"COLUMNS\",\n",
+    "    include_tailing_empty_rows=True,\n",
+    ")[0]\n",
+    "join_column = strain_sheet.get_values(\n",
+    "    (1, join_colidx),\n",
+    "    (num_rows, join_colidx),\n",
+    "    majdim=\"COLUMNS\",\n",
+    "    include_tailing_empty_rows=True,\n",
+    ")[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(len(id_column), len(sync_column), len(join_column))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(id_column[-5:], sync_column[-5:], join_column[-5:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "strain_sheet.get_values((), ())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = (\n",
+    "    plasmid_sheet.client.drive.service.files()\n",
+    "    .get(fileId=plasmid_sheet.spreadsheet.id, fields=\"modifiedTime\")\n",
+    "    .execute()\n",
+    ")\n",
+    "from_rfc3339(res[\"modifiedTime\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ingest parts"
+   ]
   },
   {
    "cell_type": "code",
@@ -353,7 +520,7 @@
    "outputs": [],
    "source": [
     "def base_url(url):\n",
-    "    return re.match(\"^(?:https?://)?(.*[^/]+)/?$\", url).group(1)"
+    "    return re.match(\"^(?:https?://)?(.*[^/]+)/?$\", url).group(1).lower()"
    ]
   },
   {
