[api,shenker/cloning] Used on 200712 to rewrite Densmore kit aliases field.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/200712 LIB parts ingest.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/200712 LIB parts ingest.ipynb
@@ -31,7 +31,7 @@
    "outputs": [],
    "source": [
     "import paulssonlab.api as api\n",
-    "from paulssonlab.api.google.drive import get_drive_modified_time\n",
+    "from paulssonlab.api.util import base_url\n",
     "import paulssonlab.cloning.workflow as workflow"
    ]
   },
@@ -93,69 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lab Obs ordering site"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import paulssonlab.api.labops as labops"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "browser = await labops.login_harvard(\n",
-    "    config[\"ecommons\"][\"username\"],\n",
-    "    config[\"ecommons\"][\"password\"],\n",
-    "    service=\"https://sysbiolabops.hms.harvard.edu/casservice\",\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "addgene_orders = await labops.get_orders(browser, vendor=\"Addgene (26)\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "my_addgene = addgene_orders[\n",
-    "    addgene_orders[\"Name\"].isin([\"Jacob Shenker\", \"Noah Olsman\"])\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "addgene_catalog = (\n",
-    "    my_addgene[\"Catalog #\"]\n",
-    "    .apply(lambda x: int(re.search(r\"(\\d+)$\", x).group(1)))\n",
-    "    .values\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 3G/JUMP/Marionette/Addgene"
+    "# 3G/JUMP/Densmore"
    ]
   },
   {
@@ -190,83 +128,7 @@
     "    \"https://www.addgene.org/127000/\",\n",
     "    \"https://www.addgene.org/126983/\",\n",
     "]\n",
-    "jump_plasmids = sorted(jump_plasmids)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "addgene_plasmids = [\n",
-    "    f\"https://www.addgene.org/{catalog}/\"\n",
-    "    for catalog in addgene_catalog\n",
-    "    if catalog not in (1000000059,)  # remove Densmore\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_addgene = [threeg_kit, *jump_plasmids, marionette_kit, *addgene_plasmids]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# only include first for duplicate URLs\n",
-    "all_addgene_deduplicated = list(dict.fromkeys(all_addgene))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(all_addgene)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(all_addgene_deduplicated)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "addgene_data = workflow.import_addgene(\n",
-    "    all_addgene_deduplicated, strain_sheet, plasmid_sheet, col[\"plasmid_maps\"]\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Densmore"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "jump_plasmids = sorted(jump_plasmids)\n",
     "densmore_kit = \"https://www.addgene.org/1000000059/\"\n",
     "densmore_wells = [\n",
     "    \"A1\",\n",
@@ -298,28 +160,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def cb(entry, data):\n",
-    "    if data[\"well\"] not in densmore_wells:\n",
-    "        return False\n",
-    "    else:\n",
-    "        return entry\n",
-    "\n",
-    "\n",
-    "addgene_data = workflow.import_addgene(\n",
-    "    densmore_kit, strain_sheet, plasmid_sheet, col[\"plasmid_maps\"], callback=cb\n",
-    ")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Alias syncing"
+    "# Densmore renaming"
    ]
   },
   {
@@ -328,164 +172,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sync_duplicate_info(columns={\"Tags\": \"\\s\", \"Aliases*\": \",\", \"Description\"}):\n",
-    "    # aliases, tags\n",
-    "    pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# allow batching edits using unlink/link, compare performance"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def sync_columns(\n",
-    "    sheet1,\n",
-    "    sheet2,\n",
-    "    sync_column,\n",
-    "    join_column=\"Plasmid(s)*\",\n",
-    "    join_separator=\"(?:\\s*,\\s*|\\s+)\",\n",
-    "    strategy=\"newest\",\n",
-    "    separator=None,\n",
-    "):\n",
-    "    pass\n",
-    "\n",
-    "\n",
-    "def sync_colletion_sheets(\n",
-    "    strain_sheet,\n",
-    "    plasmid_sheet,\n",
-    "    part_sheet,\n",
-    "    sync_column,\n",
-    "    join_column=\"Plasmid(s)*\",\n",
-    "    join_separator=\"(?:\\s*,\\s*|\\s+)\",\n",
-    "    strategy=\"newest\",\n",
-    "    separator=None,\n",
-    "):\n",
-    "    mtime1 = get_drive_modified_time(sheet1.client.drive.service, sheet1.spreadsheet.id)\n",
-    "    mtime2 = get_drive_modified_time(sheet2.client.drive.service, sheet2.spreadsheet.id)\n",
-    "    # get columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def sync_columns(\n",
-    "    sheets,\n",
-    "    sync_column,\n",
-    "    join_column=\"Plasmid(s)*\",\n",
-    "    join_separator=\"(?:\\s*,\\s*|\\s+)\",\n",
-    "    strategy=\"newest\",\n",
-    "    separator=None,\n",
-    "):\n",
-    "    mtime1 = get_drive_modified_time(sheet1.client.drive.service, sheet1.spreadsheet.id)\n",
-    "    mtime2 = get_drive_modified_time(sheet2.client.drive.service, sheet2.spreadsheet.id)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def join_sheets(sheets, join_column):\n",
-    "    pass\n",
-    "\n",
-    "\n",
-    "## join\n",
-    "# row_nums: {\"strain\": X, \"plasmid\": X, \"part\": X}\n",
-    "# ids: {\"strain\": \"LIB2\", \"plasmid\": \"pLIB3\", \"part\": \"ALIAS\"}\n",
-    "\n",
-    "## for each column:\n",
-    "# values: {\"strain\": X, \"plasmid\": X, \"part\": X}\n",
-    "# mtimes: {\"strain\": X, \"plasmid\": X, \"part\": X}\n",
-    "# sync_strategy -> sync_func"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "col_names = strain_sheet.get_row(1)\n",
-    "id_colidx = col_names.index(\"ID*\") + 1\n",
-    "sync_colidx = col_names.index(\"Aliases*\") + 1\n",
-    "join_colidx = col_names.index(\"Plasmid(s)*\") + 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "id_column = strain_sheet.get_col(id_colidx, include_tailing_empty=False)\n",
-    "num_rows = len(id_column)\n",
-    "sync_column = strain_sheet.get_values(\n",
-    "    (1, sync_colidx),\n",
-    "    (num_rows, sync_colidx),\n",
-    "    majdim=\"COLUMNS\",\n",
-    "    include_tailing_empty_rows=True,\n",
-    ")[0]\n",
-    "join_column = strain_sheet.get_values(\n",
-    "    (1, join_colidx),\n",
-    "    (num_rows, join_colidx),\n",
-    "    majdim=\"COLUMNS\",\n",
-    "    include_tailing_empty_rows=True,\n",
-    ")[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(len(id_column), len(sync_column), len(join_column))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(id_column[-5:], sync_column[-5:], join_column[-5:])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "strain_sheet.get_values((), ())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "res = (\n",
-    "    plasmid_sheet.client.drive.service.files()\n",
-    "    .get(fileId=plasmid_sheet.spreadsheet.id, fields=\"modifiedTime\")\n",
-    "    .execute()\n",
-    ")\n",
-    "from_rfc3339(res[\"modifiedTime\"])"
+    "for sheet in (strain_sheet, plasmid_sheet):\n",
+    "    rows = sheet.get_all_records()\n",
+    "    # sheet.unlink()\n",
+    "    col_idx = list(rows[0].keys()).index(\"Aliases*\") + 1\n",
+    "    for idx, row in enumerate(rows):\n",
+    "        if base_url(densmore_kit) in row[\"Source*\"]:\n",
+    "            new_aliases = re.sub(\n",
+    "                r\"([^()]*)\\s\\(([^()]*)\\)([^()]*)\", r\"\\1\\3,\\2\\3\", row[\"Aliases*\"]\n",
+    "            )\n",
+    "            sheet.update_value((idx + 2, col_idx), new_aliases, parse=False)\n",
+    "    # sheet.link() # TODO: this gives 500 error, not sure why"
    ]
   },
   {
@@ -511,16 +208,6 @@
    "outputs": [],
    "source": [
     "rows[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def base_url(url):\n",
-    "    return re.match(\"^(?:https?://)?(.*[^/]+)/?$\", url).group(1).lower()"
    ]
   },
   {
