[shenker/cloning] WIP part naming.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/200712 LIB parts ingest.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/200712 LIB parts ingest.ipynb
@@ -9,6 +9,7 @@
     "import toml\n",
     "import re\n",
     "import urllib\n",
+    "from datetime import datetime\n",
     "import pygsheets\n",
     "import benchlingapi\n",
     "import requests_html"
@@ -216,42 +217,133 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "rows[0][\"Description\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "re.search(\n",
+    "    r\"(\\S+)(?: RBS| terminator)? \\(\",\n",
+    "    \"MoClo golden gate assembly AB part for Bujard terminator (strong lambda promoter with downstream dCas binding site for Qi-lab gRNA (UC16m); gRNA sequence taken from DOI: 10.1016/j.cell.2013.02.022).\",\n",
+    ").group(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "service = plasmid_sheet.client.drive.service"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import io\n",
+    "from Bio import SeqIO\n",
+    "\n",
+    "\n",
+    "def get_sequence_by_name(service, name, root):\n",
+    "    file = api.google.get_drive_query(\n",
+    "        service,\n",
+    "        f\"(mimeType != 'application/vnd.google-apps.folder') and ('{root}' in parents) and (name contains '{name}')\",\n",
+    "    )\n",
+    "    filename = file[\"name\"].lower()\n",
+    "    content = service.files().get_media(fileId=file[\"id\"]).execute()\n",
+    "    buf = io.StringIO(content.decode(\"utf8\"))\n",
+    "    if filename.endswith(\"gb\") or filename.endswith(\"gbk\"):\n",
+    "        seq = SeqIO.read(buf, \"genbank\")\n",
+    "    elif filename.endswith(\"dna\"):\n",
+    "        seq = SeqIO.read(buf, \"genbank\")\n",
+    "    else:\n",
+    "        raise ValueError(f\"unknown extension: {filename}\")\n",
+    "    return seq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seq = get_sequence_by_name(service, \"pLIB28\", col[\"plasmid_maps\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def import_threeg_part(plasmid):\n",
-    "    pass\n",
+    "    part = plasmid_to_part(plasmid)\n",
+    "    # MoClo golden gate assembly BC part for BCD24 (low expression bi-cistronic RBS, engineered for downstream context-independence; see https://doi.org/10.1038/nmeth.2404).\n",
+    "    name = {\n",
+    "        \"P18m\": \"pT7\",\n",
+    "        \"P33m\": \"pMutalik_med\",\n",
+    "        \"P34m\": \"pMutalik_weak\",\n",
+    "        \"C31m\": \"Bxb1\",\n",
+    "        \"C40m\": \"random_blank\",\n",
+    "        \"C71m\": \"CinR-CIDDHYRTC\",\n",
+    "        \"C95m\": \"T7_RNAP\",\n",
+    "        \"C114m\": \"Cas9_recoded\",\n",
+    "        \"UC16m\": \"gQi_gRNA_BD\",\n",
+    "        \"UC17m\": \"gV1_gRNA_BD\",\n",
+    "        \"UC20m\": \"gN2_gRNA_BD\",\n",
+    "        \"UCT1m\": \"gQi_gRNA_BE\",\n",
+    "    }.get(part[\"Name*\"])\n",
+    "    if name is not None:\n",
+    "        part[\"Name*\"] = name\n",
+    "    else:\n",
+    "        part[\"Name*\"] = re.search(\n",
+    "            r\"(\\S+)(?: (?:RBS|terminator|integrase|fusion|protease))? \\(\",\n",
+    "            plasmid[\"Description\"],\n",
+    "        ).group(1)\n",
+    "    return part\n",
     "\n",
     "\n",
     "def import_densmore_part(plasmid):\n",
-    "    pass\n",
+    "    part = plasmid_to_part(plasmid)\n",
+    "    # part[\"Name*\"]\n",
+    "    return part\n",
     "\n",
     "\n",
     "def import_jump_part(plasmid):\n",
-    "    pass\n",
+    "    part = plasmid_to_part(plasmid)\n",
+    "    part[\"Name*\"] = re.sub(r\"^pJUMP\\d+-\", \"\", plasmid[\"Names\"])\n",
+    "    return part\n",
     "\n",
     "\n",
     "# accept extra columns via overrides={\"Tags\": \"foo\"}\n",
     "# pass through tags from plasmid\n",
     "\n",
     "\n",
-    "def get_part():\n",
+    "def plasmid_to_part(plasmid):\n",
     "    part = {}\n",
-    "    part[\"Name*\"] = \"\"\n",
-    "    part[\"Author*\"] = \"\"\n",
-    "    part[\"Date*\"] = \"\"\n",
-    "    part[\"Tags\"] = \"\"\n",
-    "    part[\"Plasmid/Oligos (Cutter)*\"] = \"\"\n",
-    "    part[\"Author*\"] = \"\"\n",
-    "    part[\"Date*\"] = \"\"\n",
-    "    part[\"Upstream overhang*\"] = \"\"\n",
-    "    part[\"Downstream overhang*\"] = \"\"\n",
-    "    part[\"Sequence*\"] = \"\"\n",
+    "    part[\"Name*\"] = plasmid[\"Names\"].split(\",\")[-1]\n",
+    "    part[\"Tags\"] = plasmid[\"Tags\"]\n",
+    "    # part[\"Plasmid/Oligos (Cutter)*\"] = \"\"\n",
+    "    # part[\"Author*\"] = \"\"\n",
+    "    part[\"Date*\"] = datetime.now().strftime(\"%Y-%m-%d %H:%M:%S.%f\")\n",
+    "    part[\"Upstream overhang*\"] = \"aaa\"\n",
+    "    part[\"Downstream overhang*\"] = \"bbb\"\n",
+    "    part[\"Sequence*\"] = \"aaaseqbbb\"\n",
     "    part[\"Organism/codon usage*\"] = \"\"\n",
-    "    part[\"Description\"] = \"\"\n",
+    "    part[\"Description\"] = plasmid[\"Description\"]\n",
     "    return part\n",
     "\n",
     "\n",
     "part_rules = [\n",
     "    (\n",
-    "        lambda x: (base_url(threeg_kit) in x[\"Source*\"]) and (x[\"Aliases*\"][0] != \"V\"),\n",
+    "        lambda x: (base_url(threeg_kit) in x[\"Source*\"]) and (x[\"Names\"][0] != \"V\"),\n",
     "        import_threeg_part,\n",
     "    ),\n",
     "    (lambda x: base_url(densmore_kit) in x[\"Source*\"], import_densmore_part),\n",
@@ -272,9 +364,16 @@
     "for row in rows:\n",
     "    for predicate, rule in part_rules:\n",
     "        if predicate(row):\n",
-    "            print(rule, row[\"Aliases*\"])\n",
+    "            print(row[\"Names\"], rule(row)[\"Name*\"])\n",
     "            break"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
