list_drive now handles pagination. Rewrote get_strain_collection_sheets to use list_drive and ensure_folder instead of filter_drive, removed filter_drive.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/200712 LIB parts ingest.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/200712 LIB parts ingest.ipynb
@@ -208,73 +208,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rows[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rows[0][\"Description\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "re.search(\n",
-    "    r\"(\\S+)(?: RBS| terminator)? \\(\",\n",
-    "    \"MoClo golden gate assembly AB part for Bujard terminator (strong lambda promoter with downstream dCas binding site for Qi-lab gRNA (UC16m); gRNA sequence taken from DOI: 10.1016/j.cell.2013.02.022).\",\n",
-    ").group(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "service = plasmid_sheet.client.drive.service"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import io\n",
-    "from Bio import SeqIO\n",
-    "\n",
-    "\n",
-    "def get_sequence_by_name(service, name, root):\n",
-    "    file = api.google.get_drive_query(\n",
-    "        service,\n",
-    "        f\"(mimeType != 'application/vnd.google-apps.folder') and ('{root}' in parents) and (name contains '{name}')\",\n",
-    "    )\n",
-    "    filename = file[\"name\"].lower()\n",
-    "    content = service.files().get_media(fileId=file[\"id\"]).execute()\n",
-    "    buf = io.StringIO(content.decode(\"utf8\"))\n",
-    "    if filename.endswith(\"gb\") or filename.endswith(\"gbk\"):\n",
-    "        seq = SeqIO.read(buf, \"genbank\")\n",
-    "    elif filename.endswith(\"dna\"):\n",
-    "        seq = SeqIO.read(buf, \"genbank\")\n",
-    "    else:\n",
-    "        raise ValueError(f\"unknown extension: {filename}\")\n",
-    "    return seq"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "seq = get_sequence_by_name(service, \"pLIB28\", col[\"plasmid_maps\"])"
    ]
   },
   {
@@ -361,11 +295,97 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plasmid_folder = col[\"plasmid_maps\"]\n",
+    "files_service = service.files()\n",
+    "req = files_service.list(q=f\"'{plasmid_folder}' in parents\", pageSize=1000)\n",
+    "files = []\n",
+    "while req is not None:\n",
+    "    doc = req.execute()\n",
+    "    files.extend(doc.get(\"files\", []))\n",
+    "    req = files_service.list_next(req, doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for row in rows:\n",
     "    for predicate, rule in part_rules:\n",
     "        if predicate(row):\n",
     "            print(row[\"Names\"], rule(row)[\"Name*\"])\n",
     "            break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Part cutting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "api.google.filter_drive(files, {\"foo\": (re.compile(r\"pLIB1\\.\"), False)})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seq = workflow.get_sequence_by_name(service, \"pLIB1\", col[\"plasmid_maps\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Bio import Restriction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frags = Restriction.BsaI.catalyse(seq.seq, linear=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(frags[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frags[1]"
    ]
   },
   {
