[fp_aggregation] autocorr is now for RDF, tested various scenarios

--- a/paulssonlab/src/paulssonlab/projects/fp_aggregation/Agar pad analysis paircorr.ipynb
+++ b/paulssonlab/src/paulssonlab/projects/fp_aggregation/Agar pad analysis paircorr.ipynb
@@ -440,31 +440,28 @@
     "        )\n",
     "    if cell_indices == \"all\":\n",
     "        cell_indices = np.arange(np.amax(seg))\n",
-    "    rho_values = []\n",
     "    for cell_index in cell_indices:\n",
     "        min_fluor = np.amin(fluor_img)\n",
     "        cell = np.ma.masked_where(seg != cell_index + 1, fluor_img)\n",
     "        cell -= min_fluor\n",
-    "        rho = np.mean(cell)\n",
-    "        rho_values.append(rho)\n",
     "    all_auto_corr = []\n",
     "    all_k_values = []\n",
     "    for i, cell_index in enumerate(cell_indices):\n",
     "        r_vals = r_values[i]\n",
     "        gr_vals = gr_values[i]\n",
-    "        rho = rho_values[i]\n",
+    "        gr_mean = np.mean(gr_values[i])\n",
     "        k_vals = np.arange(dr, r_vals[-1], dr)\n",
     "        all_k_values.append(k_vals)\n",
     "        auto_corr = []\n",
     "        denom = 0\n",
     "        for i in range(len(r_vals)):\n",
-    "            denom += np.power(rho * gr_vals[i] - rho, 2)\n",
+    "            denom += np.power(gr_vals[i] - gr_mean, 2)\n",
     "        for ki, k in enumerate(k_vals):\n",
     "            num = 0\n",
     "            contrib_to_num = 0\n",
     "            for i in k_vals[: len(k_vals) - ki]:\n",
     "                contrib_to_num += 1\n",
-    "                num += (rho * gr_vals[i - 1] - rho) * (rho * gr_vals[i + ki] - rho)\n",
+    "                num += (gr_vals[i - 1] - gr_mean) * (gr_vals[i + ki] - gr_mean)\n",
     "            num = num / contrib_to_num\n",
     "            auto_corr.append(num / denom)\n",
     "        all_auto_corr.append(auto_corr)\n",
@@ -515,21 +512,21 @@
     "# rdf(seg[700:850,425:575], test_image, ref_point_val = 'max', cell_indices=[20], time_allowed=80,\n",
     "#         savetxt='20200714',start_r=1,dr=1, intensity_weighted = True)\n",
     "%run Testcreator.ipynb\n",
-    "name = \"plots_gaussian_stdev2_noise_highint\"\n",
+    "name = \"randomblobs\"\n",
     "\n",
     "autocorr(\n",
     "    np.genfromtxt(\"cellmask\"),\n",
     "    test_image,\n",
     "    cell_indices=[20],\n",
     "    time_allowed=80,\n",
-    "    savetxt=\"20200714/autocorr_\" + name,\n",
+    "    savetxt=\"20200714/gr_as_Y/autocorr_\" + name,\n",
     "    ref_point_val=\"max\",\n",
     "    r_values=None,\n",
     "    gr_values=None,\n",
     "    intensity_weighted=True,\n",
     "    start_r=1,\n",
     "    dr=1,\n",
-    "    rdfsavetxt=\"20200714/rdf_\" + name,\n",
+    "    rdfsavetxt=\"20200714/gr_as_Y/rdf_\" + name,\n",
     ")\n",
     "\n",
     "fig, axes = plt.subplots(1, 4, figsize=(12, 3))\n",
@@ -541,15 +538,17 @@
     "ax[1].imshow(np.ma.masked_where(seg[700:850, 425:575] == 0, test_image))\n",
     "ax[1].set_title(\"segmented\")\n",
     "\n",
-    "plot_gr_from_file(\"20200714/autocorr_\" + name, 1, savefig=None, line=[0], ax=ax[2])\n",
+    "plot_gr_from_file(\n",
+    "    \"20200714/gr_as_Y/autocorr_\" + name, 1, savefig=None, line=[0], ax=ax[2]\n",
+    ")\n",
     "ax[2].set_title(\"autocorr\")\n",
     "\n",
-    "plot_gr_from_file(\"20200714/rdf_\" + name, 1, savefig=None, line=[1], ax=ax[3])\n",
+    "plot_gr_from_file(\"20200714/gr_as_Y/rdf_\" + name, 1, savefig=None, line=[1], ax=ax[3])\n",
     "ax[3].set_title(\"rdf\")\n",
     "\n",
-    "fig.suptitle(name, fontsize=12)\n",
+    "fig.suptitle(name, fontsize=14, y=1.05)\n",
     "plt.tight_layout()\n",
-    "fig.savefig(\"20200714/plots_\" + name, y=1)\n",
+    "fig.savefig(\"20200714/gr_as_Y/plots_\" + name, y=1)\n",
     "np.savetxt(\"cellmask\", seg[700:850, 425:575])"
    ]
   },
