--- a/paulssonlab/src/paulssonlab/projects/fp_aggregation/Testcreator.ipynb
+++ b/paulssonlab/src/paulssonlab/projects/fp_aggregation/Testcreator.ipynb
@@ -69,10 +69,11 @@
     "        image = np.random.normal(loc=mean, scale=stdev, size=size)\n",
     "    if np.size(mask) > 1:\n",
     "        image = np.ma.array(image, mask=mask)\n",
-    "        if cell_background[0] == \"gaussian\":\n",
-    "            mean, stdev = cell_background[1:]\n",
-    "            cell_noise = np.random.normal(loc=mean, scale=stdev, size=size)\n",
-    "            image += cell_noise\n",
+    "        if cell_background:\n",
+    "            if cell_background[0] == \"gaussian\":\n",
+    "                mean, stdev = cell_background[1:]\n",
+    "                cell_noise = np.random.normal(loc=mean, scale=stdev, size=size)\n",
+    "                image += cell_noise\n",
     "    for shape in shapes:\n",
     "        if shape[0] == \"circle\" or shape[0] == \"rings\":\n",
     "            image_to_add = np.zeros(size)\n",
@@ -127,7 +128,8 @@
     "#                                  ,savename='test_image')\n",
     "\n",
     "# test_image = generate_test_image(size=(150,150),shapes=[['circle',[70,70],1,100]],\n",
-    "#                                  savename='test_image')\n",
+    "#                                  savename='test_image',mask=mask,background=['gaussian',10,3],\n",
+    "#                                  cell_background = ['gaussian',20,3])\n",
     "\n",
     "# test_image = generate_test_image(size=(150,150),shapes=[['circle',[70,70],5,100],['circle',[70,50],5,100],\n",
     "#                                                        ['circle',[70,90],5,100]],\n",
@@ -138,12 +140,39 @@
     "#                                                        ['circle',[80,100],8,30]],\n",
     "#                                  savename='test_image')\n",
     "\n",
+    "# test_image = generate_test_image(size=(150,150),shapes=[['gaussian',[70,70],[5,5],100]]\n",
+    "#                                  ,savename='test_image',mask=mask)\n",
+    "\n",
+    "# test_image = generate_test_image(size=(150,150),shapes=[['gaussian',[70,70],[2,2],100]],\n",
+    "#                                  background=['gaussian',10,3]\n",
+    "#                                  ,savename='test_image',mask=mask,\n",
+    "#                                 cell_background = ['gaussian',20,3])\n",
+    "\n",
+    "# test_image = generate_test_image(size=(150,150),shapes=[['gaussian',[38,70],[5,5],0]],\n",
+    "#                                  savename='test_image',mask=mask,background=['gaussian',10,3],\n",
+    "#                                  cell_background = ['gaussian',20,3])\n",
+    "\n",
+    "# test_image = generate_test_image(size=(150,150),shapes=[['gaussian',[38,70],[2,2],100],\n",
+    "#                                                        ['gaussian',[100,80],[2,2],100]],\n",
+    "#                                  savename='test_image',mask=mask,background=['gaussian',10,3],\n",
+    "#                                  cell_background = ['gaussian',20,3])\n",
+    "\n",
     "test_image = generate_test_image(\n",
     "    size=(150, 150),\n",
-    "    shapes=[[\"gaussian\", [70, 70], [2, 2], 200]],\n",
-    "    background=[\"gaussian\", 10, 3],\n",
+    "    shapes=[\n",
+    "        [\"gaussian\", [38, 70], [2, 2], 40],\n",
+    "        [\"gaussian\", [100, 80], [4, 4], 35],\n",
+    "        [\"gaussian\", [70, 80], [4, 2], 40],\n",
+    "        [\"gaussian\", [85, 65], [5, 2], 20],\n",
+    "        [\"gaussian\", [40, 68], [2, 6], 10],\n",
+    "        [\"gaussian\", [76, 75], [2, 2], 20],\n",
+    "        [\"gaussian\", [50, 72], [3, 2], 30],\n",
+    "        [\"gaussian\", [55, 79], [4, 2], 20],\n",
+    "        [\"gaussian\", [45, 63], [3, 5], 10],\n",
+    "    ],\n",
     "    savename=\"test_image\",\n",
     "    mask=mask,\n",
+    "    background=[\"gaussian\", 10, 3],\n",
     "    cell_background=[\"gaussian\", 20, 3],\n",
     ")\n",
     "\n",
